libmetacity: use POS_EXPR_INT for POS_TOKEN_VARIABLE

Commit 90f64f2ba50413c3fd20a7049162736e2eb98811 changed
POS_TOKEN_VARIABLE type from POS_EXPR_INT to POS_EXPR_DOUBLE.

Unfortunately this breaks existing themes. Use POS_EXPR_DOUBLE
only on HiDPI screens (scale > 1) to restore previous behaviour.

https://bugzilla.gnome.org/show_bug.cgi?id=778209